--- a/app/views/prediction/getPostcodePrediction.html.erb
+++ b/app/views/prediction/getPostcodePrediction.html.erb
@@ -22,7 +22,7 @@
   <tbody>
     <% (0..(@period / 10)).each do |i| %>
       <tr>
-        <td><%= @single_readings.first.created_at + (i * 10 + @time_now) * 60 %></td>
+        <td><%= (@single_readings.first.time + (i * 10 + @time_now) * 60).in_time_zone("Melbourne") %></td>
         <td><%= @temperature_prediction[0][i].temperature %></td>
         <td><%= @temperature_prediction[1] %></td>
         <td><%= @rainfall_prediction[0][i].rainfall %></td>
