--- a/app/views/reading/getPostcodeReading.json.erb
+++ b/app/views/reading/getPostcodeReading.json.erb
@@ -1,27 +1,27 @@
 {
- "date":"<%=@date %>",
- "locations":[
-	 {
-		 "id":"@station.name",
-		 "lat":"@station.lat",
-		 "lon":"@station.long",
-		 "last_update":"@station.modified_at",
-		 "measurements":[ 
-			 {
-			 <% i = 0 %>
-			 <% @single_readings.each do |sr| %>
-			 	<% if i == 0 %>
-			 		<% i = 1 %>
-			 		<% next %>
-			 	<% end %>
-			 "time":"<%= sr.created_at %>",
-			 "temp":"<%= sr.temperature.temperature %>",
-			 "precip":"<%= sr.rainfall.rainfall %>",
-			 "wind_direction":"<%= sr.wind.windDirection %>",
-			 "wind_speed":"<%= sr.wind.windSpeed %>"
-			 }<% if sr != @single_readings.last %>,<% end %>
-			 <% end %>
-		 	]
-	}
-	]
+"date":"<%=@date %>",
+"locations":[
+    {
+        "id":"@station.name",
+        "lat":"@station.lat",
+        "lon":"@station.long",
+        "last_update":"@station.modified_at.in_time_zone("Melbourne")",
+        "measurements":[ 
+            {
+            <% i = 0 %>
+            <% @single_readings.each do |sr| %>
+                <% if i == 0 %>
+                    <% i = 1 %>
+                    <% next %>
+                <% end %>
+            "time":"<%= sr.time.in_time_zone("Melbourne") %>",
+            "temp":"<%= sr.temperature.temperature %>",
+            "precip":"<%= sr.rainfall.rainfall %>",
+            "wind_direction":"<%= sr.wind.windDirection %>",
+            "wind_speed":"<%= sr.wind.windSpeed %>"
+            }<% if sr != @single_readings.last %>,<% end %>
+            <% end %>
+            ]
+    }
+    ]
 }
