--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-<%= yield %>
+  <div class="navbar navbar-inverse" role="navigation">
+       <div class="navbar-header">
+      <div class="container">
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
