--- a/app/views/location/getAllStation.html.erb
+++ b/app/views/location/getAllStation.html.erb
@@ -18,7 +18,7 @@
         <td><%= s.stationID %></td>
         <td><%= s.geolocation.latitude %></td>
         <td><%= s.geolocation.longitude %></td>
-        <td><%= s.updated_at %></td>
+        <td><%= s.updated_at.in_time_zone("Melbourne") %></td>
       </tr>
     <% end %>
   </tbody>
