--- a/app/views/reading/getLocationReading.html.erb
+++ b/app/views/reading/getLocationReading.html.erb
@@ -20,6 +20,10 @@
 
   <tbody>
     <% @single_readings.each do |sr| %>
+    <% if i == 0 %>
+        <% i = 1 %>
+        <% next %>
+    <% end %>
       <tr>
         <td><%= sr.time.in_time_zone("Melbourne") %></td>
         <td><%= sr.temperature.temperature %></td>
