--- a/app/views/reading/getPostcodeReading.html.erb
+++ b/app/views/reading/getPostcodeReading.html.erb
@@ -19,7 +19,12 @@
   </thead>
 
   <tbody>
+    <% i = 0 %>
     <% @single_readings.each do |sr| %>
+                <% if i == 0 %>
+                    <% i = 1 %>
+                    <% next %>
+                <% end %>
       <tr>
         <td><%= sr.time.in_time_zone("Melbourne") %></td>
         <td><%= sr.temperature.temperature %></td>
